@@ -142,8 +142,6 @@ public class ServiceFactoryComponentManager<S> extends SingleComponentManager<S>
             // log that the service factory component cannot be created (we don't
             // know why at this moment; this should already have been logged)
             getLogger().log( LogService.LOG_DEBUG, "Failed creating the component instance; see log for reason", null );
-            setState(previousState, State.failed);
-
         }
         else
         {
