@@ -3,6 +3,7 @@ Changes in 2.1.8
 ** Bug
     * [FELIX-5927] - Single element Annotation type does not incorporate PREFIX_
     * [FELIX-5926] - Logger instance is not set for constructor and reference injection
+    * [FELIX-5929] - Failed activation state not reported in DTOs
 
 
 Changes in 2.1.6
